PyMaker/datas/object2/RawHTML/i9401/Python_DOC_referPages.how-to-include-in-string-formats-in-python-2-7.txt
<div class="post-text" itemprop="text">
<p>I am trying to append <code>%</code> in a string using string formats.</p>
<p>I am trying to get the below output: </p>
<pre><code>a : [" name like '%FTa0213' "]
</code></pre>
<p><strong>Try 1 :</strong></p>
<pre><code>a = [ ] 
b = {'by_name':"FTa0213"}
a.append(" name like "%" %s' " %b['by_name'])
print "a :",a
</code></pre>
<p><strong>Error :</strong></p>
<pre><code>a.append(" name like "%" %s' " %b['by_name'])
TypeError: not all arguments converted during string formatting
</code></pre>
<p><strong>Try 2:</strong></p>
<pre><code>a = [ ] 
b = {'by_name':"FTa0213"}
c = "%"
a.append(" name like '{0}{1}' ".format(c,b['by_name'])
print "a :",a
</code></pre>
<p><strong>Error :</strong></p>
<pre><code> print "a :",a
        ^
SyntaxError: invalid syntax
</code></pre>
<p>How do I include a <code>%</code> in my formatted string?</p>
</div>
<div class="post-text" itemprop="text">
<p>To include a percent <code>%</code> into a string which will be used for a printf style string format, simply escape the <code>%</code> by including a double percent <code>%%</code></p>
<pre><code>a = []
b = {'by_name': "FTa0213"}
a.append(" name like %%%s' " % b['by_name'])
print "a :", a
</code></pre>
<p>(<a href="https://docs.python.org/3/library/stdtypes.html#printf-style-string-formatting" rel="nofollow noreferrer">Docs</a>)</p>
</div>
<div class="post-text" itemprop="text">
<p><strong>In your first try</strong>, the way you use "%" is wrong; the code below could work for your first try.</p>
<pre><code>a.append( "name like %%%s" % b['by_name'])
</code></pre>
<p>Since the "%" is special in python string, so you need to add a "%" before the real "%" to escape.</p>
<p><strong>In your second try</strong>, there is nothing wrong in your print, you forgot a <code>")"</code> in your <code>a.append</code> line. ;-)</p>
</div>
<div class="post-text" itemprop="text">
<p>just put the % there, no need to set the variable</p>
<pre><code>a = [ ] 
b = {'by_name':"FTa0213"}
a.append(" name like '%{}' ".format(b['by_name']))
print "a :",a
</code></pre>
<p>the output is</p>
<blockquote>
<p>a : [" name like '%FTa0213' "]</p>
</blockquote>
</div>
<div class="post-text" itemprop="text">
<p>You can escape the percent sign by doubling it.</p>
<pre><code>a = [] 
b = {'by_name': "FTa0213"}
a.append(" name like '%%%s' " % b['by_name'])
print "a :", a
</code></pre>
<p><strong>output</strong></p>
<pre><code>a : [" name like '%FTa0213' "]
</code></pre>
<p>However, I think it's clearer to use the <code>format</code> method:</p>
<pre><code>a = [ ] 
b = {'by_name': "FTa0213"}
a.append(" name like '%{by_name}' ".format(**b))
print "a :", a
</code></pre>
</div>
<span class="comment-copy">Yeah Thanks this too worked!</span>
<span class="comment-copy">@ShivkumarKondi welcome dude</span>
